style(monitor-parent): improve the code style