@@ -1,68 +1,35 @@
+/*
+ * Copyright 2024 European Union Agency for the Operational Management of Large-Scale IT Systems
+ * in the Area of Freedom, Security and Justice (eu-LISA)
+ *
+ * Licensed under the EUPL, Version 1.2 or – as soon they will be approved by the
+ * European Commission - subsequent versions of the EUPL (the "Licence");
+ * You may not use this work except in compliance with the Licence.
+ * You may obtain a copy at: https://joinup.ec.europa.eu/software/page/eupl
+ */
+
 package eu.ecodex.utils.monitor.gw.service;
 
-import eu.ecodex.utils.monitor.gw.config.GatewayMonitorConfigurationProperties;
 import eu.ecodex.utils.monitor.gw.domain.AccessPoint;
 import eu.ecodex.utils.monitor.gw.dto.AccessPointStatusDTO;
-import org.apache.hc.client5.http.auth.CredentialsProvider;
-import org.apache.hc.client5.http.classic.methods.HttpPost;
-import org.apache.hc.client5.http.impl.io.PoolingHttpClientConnectionManagerBuilder;
-import org.apache.hc.client5.http.io.HttpClientConnectionManager;
-import org.apache.hc.client5.http.protocol.HttpClientContext;
-import org.apache.hc.client5.http.ssl.SSLConnectionSocketFactory;
-import org.apache.hc.client5.http.ssl.SSLConnectionSocketFactoryBuilder;
-import org.apache.hc.core5.http.ParseException;
-import org.apache.hc.core5.http.ProtocolVersion;
-import org.apache.hc.core5.http.ssl.TLS;
-import org.apache.hc.core5.ssl.PrivateKeyDetails;
-import org.apache.hc.core5.ssl.PrivateKeyStrategy;
-import org.apache.hc.core5.ssl.SSLContexts;
-import org.apache.hc.core5.ssl.TrustStrategy;
-import org.slf4j.LoggerFactory;
-import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.actuate.health.AbstractHealthIndicator;
 import org.springframework.boot.actuate.health.Health;
-import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
 
-import org.apache.hc.client5.http.auth.AuthScope;
-import org.apache.hc.client5.http.auth.UsernamePasswordCredentials;
-import org.apache.hc.client5.http.classic.methods.HttpGet;
-import org.apache.hc.client5.http.impl.auth.BasicCredentialsProvider;
-import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
-import org.apache.hc.client5.http.impl.classic.CloseableHttpResponse;
-import org.apache.hc.client5.http.impl.classic.HttpClients;
-import org.apache.hc.core5.http.io.entity.EntityUtils;
-
-import javax.net.ssl.*;
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.security.*;
-import java.security.cert.CertificateException;
-import java.security.cert.X509Certificate;
-import java.util.Comparator;
-import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-
+/**
+ * GatewayHealthIndicator is an implementation of the AbstractHealthIndicator that provides health
+ * checks specifically for gateway services.
+ */
 public class GatewayHealthIndicator extends AbstractHealthIndicator {
-
-    private static final Logger LOGGER = LoggerFactory.getLogger(GatewayHealthIndicator.class);
-
     @Autowired
     ConfiguredGatewaysService configuredGatewaysService;
-
     @Autowired
     GatewaysCheckerService gwChecker;
 
-
     @Override
-    protected void doHealthCheck(Health.Builder builder) throws Exception {
+    protected void doHealthCheck(Health.Builder builder) {
         builder.up();
         checkSelf(builder);
-
     }
 
     private void checkSelf(Health.Builder builder) {
@@ -71,11 +38,7 @@ public class GatewayHealthIndicator extends AbstractHealthIndicator {
 
         if (!gatewayStatus.getFailures().isEmpty()) {
             builder.down();
-            builder.withDetail("self_detail", gatewayStatus.getFailures().get(0).toString());
+            builder.withDetail("self_detail", gatewayStatus.getFailures().getFirst().toString());
         }
-
     }
-
-
-
 }
